[package]
name = "crate-vis"
version = "0.1.0"
edition = "2021"
authors = ["Evan Almloff"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphviz-rust = "0.6.2"
krates = "0.13.0"
layout-rs = "0.1.1"

[workspace]
members = [
    "cli",
    "retained-size"
]